--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "type": "module",
+  "homepage": "https://nikhila2607.github.io/kit_inv",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -9,12 +10,12 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "lucide-react": "^0.303.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "regenerator-runtime": "^0.14.1",
-    "lucide-react": "^0.303.0",
     "react-router-dom": "^6.21.1",
-    "react-speech-recognition": "^3.10.0"
+    "react-speech-recognition": "^3.10.0",
+    "regenerator-runtime": "^0.14.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -26,6 +27,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.0.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.2.2",
